# BigBlueBaron

./: Drive.STL  Fix Plate.STL  LICENSE  QuadLeg.stl  README.md  WebsiteCodePen  blade.STL  multithreadedMapping.py
Autopilot/: QPlane-Param-3-24-25.param  QPlane-Param-4-29-25.param  QuadParam-3-24-25.param
CodePenCode/bigbluebaron/: index.html  style.css
CodePenCode/flightdocumentation/: index.html
CodePenCode/theteam/: index.html  style.css
CodePenCode/userstory/: index.html  style.css
Frame-Payload/: Cover.STL  Ring_plate.STL
ODLC/: Information.txt
ODLC/Cpp-ODLC/: CMakeLists.txt  mavlink_system_info.cpp  mavlink_test.cpp  notesfor2.11.25  sdp.cpp
ODLC/Cpp-ODLC/images/: #resize.cpp#  resize.cpp
ODLC/Python-ODLC/: main.py  main_program.py
ODLC/Python-ODLC/ss/: mavlink_position_update.py  mavlink_trial.py
Website/: .hintrc  IDstyle.css  Initialdesign.html  TDstyle.css  about.html  aboutstyles.css  blog.css  blog.html  gptstructure.html  index.html  indexstyle.css  notes.txt  overview.html  overviewstyles.css  technicaldocumentation.html
Website/documents/: testfile.txt
Website/scripts/: date.js
mapping/: multithreadedMapping.py  orthophotos.py
